[build-system]
requires = [
    "setuptools >=65.0",
    "wheel >=0.36.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "python_project_template"
dynamic = ["version"]
readme = "README.md"
license = {text = 'MIT'}
description = "python_project_template"
requires-python = ">=3.10"
dependencies = []
[[project.authors]]
name = "Anthony Corletti"
email = "anthcor+python_project_template@gmail.com"

[project.optional-dependencies]
dev = [
    "black >=21.10b0",
    "coverage >=6.1.1",
    "invoke >=2.0.0",
    "mypy >=0.910",
    "packaging >=21.0",
    "pre-commit >=2.17.0",
    "pytest >=6.2.5",
    "pytest-cov >=3.0.0",
    "ruff >=0.0.98",
    "build >=0.7.0",
]

[project.urls]
Documentation = "https://github.com/anthonycorletti/python_project_template"

[tool.setuptools.dynamic]
version = {attr = "python_project_template.__version__"}

[tool.ruff]
line-length = 88
ignore = ["D10"]
include = ["*.py"]
select = ["E", "F", "I"]
target-version = "py310"
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "D415",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.black]
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.*_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
mypy_path = ["python_project_template", "tests"]
exclude = ["dist", "build", ".venv"]

[tool.coverage.run]
source = ["python_project_template", "tests"]
omit = ["*__init__.py"]
parallel = true

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError'
]
