[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snok"
description = "ðŸš€ A simple, modern, full-stack toolkit for Python ðŸ"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.24.1",
    "invoke>=1.6.0",
    "jinja2>=3.1.2",
    "packaging>=21.0",
    "pydantic>=1.8.2",
    "rich>=13.4.2",
    "setuptools>=67.8.0",
    "toml>=0.10.2",
    "typer>=0.7.0",
    "wheel>=0.36",
]
[[project.authors]]
name = "Anthony Corletti"
email = "anthcor+snok@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [
    "asgi-lifespan>=2.1.0",
    "black>=21.10",
    "coverage>=7.2.7",
    "mdx-include>=1.4.2",
    "mkdocs-material>=9.1.5",
    "mkdocs>=1.4.2",
    "mypy>=0.910",
    "pre-commit>=2.17.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=3.3.1",
    "pytest>=6.2.5",
    "ruff>=0.0.98",
    "types-toml>=0.1.0",
    "watchfiles>=0.19.0",
]

[project.urls]
Home = "https://github.com/anthonycorletti/snok"
Documentation = "https://snok.corletti.xyz"

[project.scripts]
snok = "snok.cli:app"

[tool.snok]
sources = ["snok", "tests"]

[tool.ruff]
line-length = 88
ignore = [
    "D10",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "D415",
]
include = ["*.py"]
exclude = ["dist", "build", ".venv", "snok/templates/*"]
select = ["E", "F", "I"]
target-version = "py311"

[tool.black]
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.*_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
  | snok/templates/*
)/
'''
force-exclude = '''
/(
    snok/templates/*
)/
'''

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = ["dist", "build", ".venv", "snok/templates/*"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.setuptools.package-data]
snok = ["py.typed", "templates/**/*"]

[tool.pytest.ini_options]
addopts = [
    "-o",
    "console_output_style=progress",
    "--ignore=snok/templates",
    "--disable-warnings",
    "--showlocals",
    "--cov=snok",
    "--cov=tests",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-fail-under=100",
]

[tool.coverage.run]
omit = ["*__init__.py", "snok/templates/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.setuptools.dynamic.version]
attr = "snok.__version__"

[tool.setuptools.packages.find]
exclude = ["tests"]
