[metadata]
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True

[options.packages.find]
include =
    python_project_template
exclude =
    tests

[options.package_data]
python_project_template =
    py.typed
