[metadata]
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True

[options.package_data]
{{ __template_name }} =
    py.typed

[options.packages.find]
include =
    {{ __template_name }}
exclude =
    tests
